--- a/package.json
+++ b/package.json
@@ -18,17 +18,15 @@
     "multer": "^2.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "pdfjs-dist": "^5.3.31",
+    "pdfjs-dist": "^3.11.174",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
-    "react-draggable": "^4.5.0",
     "react-pdf": "^10.0.1",
     "react-router-dom": "^6.22.3",
-    "tailwindcss": "^3.3.3",
-    "uuid": "^11.1.0"
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -39,7 +37,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
-    "vite": "^7.0.0",
-    "vite-plugin-static-copy": "^3.1.0"
+    "vite": "^7.0.0"
   }
 }
