--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multer": "^2.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdf-lib": "^1.17.1",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dnd": "^16.0.1",
